--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,1 +1,19 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
+
+{% block content %}
+<link rel="stylesheet" href="/website/static/base.css">
+
+
+<div class="background">
+    <div class="button-container">
+        <a href="/org" class="zoom-button">Organizational Devt. Change</a>
+        <a href="/pfm" class="zoom-button">Public Finance Management</a>
+        <a href="/research" class="zoom-button">Research Methodologies</a>
+        <a href="/corp" class="zoom-button">Corporate Governance</a>
+        <a href="/marketing" class="zoom-button">Marketing Mgmt.</a>
+        <a href="/egov" class="zoom-button">E-Governance</a>
+        <a href="/crm" class="zoom-button">CRM</a>
+    </div>
+  </div>
+
+{% endblock%}
