--- a/website/templates/crm.html
+++ b/website/templates/crm.html
@@ -17,7 +17,7 @@
   </ol>
 </nav>
 
-<div class="container-xxl">
+<!---<div class="container-xxl">
 
 
     <div class="accordion" id="accordionPanelsStayOpenExample">
