--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--------------------------------------------------CSS------------------------------------------------->
-    
-    <link defer rel="stylesheet" href="https://flasknotes.blob.core.windows.net/ggggg/log.css">
+    <link prefetch href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 
+    crossorigin="anonymous">
+    <script async src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+
+  </script>
+    <link rel="stylesheet" href="https://flasknotes.blob.core.windows.net/ggggg/log.css">
     <!-----------------------------FONTS------------------------------------------------------->
     
 
@@ -15,7 +22,12 @@
     
     <title>Log-In</title>
 </head>
-<body class="env_production notranslate" translate="no" data-theme-suffix="_alx">
+<body>
+  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <strong>Page still under-development! </strong>Don't input any information
+    <!---------<button type="button" class="btn-close" data-bs-dismiss="alert" 
+      aria-label="Close"></button>----->
+  </div>
 <main>
   <div id="layout-bars"></div>
 
