--- a/website/templates/marketing.html
+++ b/website/templates/marketing.html
@@ -17,7 +17,7 @@
   </ol>
 </nav>
 
-<div class="container-xxl">
+<!---<div class="container-xxl">
 
 
     <div class="accordion" id="accordionPanelsStayOpenExample">
@@ -184,7 +184,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>---->
     
     
     
