--- a/website/templates/pfm.html
+++ b/website/templates/pfm.html
@@ -24,7 +24,7 @@
       <div class="accordion-item">
         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-            Research Methodologies
+            <strong>Public Finance Management</strong>
           </button>
         </h2>
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
@@ -37,7 +37,7 @@
       </div>
   </div>
   
-  <div class="accordion" id="accordionPanelsStayOpenExample">
+  <!----<div class="accordion" id="accordionPanelsStayOpenExample">
     <div class="accordion-item">
       <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
         <div class="accordion-body">
@@ -184,7 +184,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>------>
   
   
   
@@ -199,7 +199,7 @@
 {% block footer %}
 <nav aria-label="Page navigation example" id="pager">
   <ul class="pagination justify-content-end">
-    <li class="page-item"><a class="page-link" href="/BPAL 4th year">
+    <li class="page-item"><a class="page-link" href="/research">
       Previous</a></li>
     <li class="page-item">
       <a class="page-link" href="/egov">E-Gov</a>
