--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -27,6 +27,11 @@
 {% endblock %}
 </head>
 <body>
+  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <strong class="a">Page still under-development! </strong>Don't input any information
+    <!---------<button type="button" class="btn-close" data-bs-dismiss="alert" 
+      aria-label="Close"></button>----->
+  </div>
   <section class="vh-150 bg-image"
   style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
   <div class="mask d-flex align-items-center h-150 gradient-custom-3">
@@ -129,6 +134,7 @@ function process(event) {
     this.classList.toggle('fa-eye-slash');
 });
 </script>
+
 </body>
 </html>
 
