--- a/website/templates/3rdhome.html
+++ b/website/templates/3rdhome.html
@@ -13,7 +13,10 @@
         <a href="/marketing" class="zoom-button">Project management</a>
         <a href="/egov" class="zoom-button">Strategic Management</a>
         <a href="/crm" class="zoom-button">HRM</a>
-    </div>
-  </div>
+</div>
+
+
+{% block footer %}
+{% endblock%}
 
 {% endblock%}
