--- a/website/templates/egov.html
+++ b/website/templates/egov.html
@@ -24,14 +24,14 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              Research Methodologies
+              <strong>Electronic Governance</strong> 
             </button>
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
             <div class="accordion-body">
-              <strong>Course Outline</strong> 
+              <strong>Course Work & Assignment</strong> 
               <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 4.1 Notes/E-Gov/Course Work and Lecture plan _ Electronic Governance Notes and Group assignments .pdf">Download</a>
             </div>
           </div>
         </div>
@@ -41,9 +41,9 @@
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
-            <strong>Assignments</strong> 
+            <strong>Main Notes</strong> 
             <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 4.1 Notes/E-Gov/governance, public administration and information technology for post-2015 development ( PDFDrive ) (1)-min.pdf">Download</a>
           </div>
         </div>
       </div>
@@ -52,9 +52,9 @@
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
-            <strong>Chapter 1</strong> 
+            <strong>E-Participation Notes</strong> 
             <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 4.1 Notes/E-Gov/E Participation_ Class Notes .pdf">Download</a>
           </div>
         </div>
       </div>
@@ -63,13 +63,14 @@
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
-            <strong>Chapter 2</strong> 
+            <strong>Knowledge Management</strong> 
             <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 4.1 Notes/E-Gov/E_Governance _ Knowledge Managment and E Records Class notes .pdf">Download</a>
           </div>
         </div>
       </div>
-    </div><div class="accordion" id="accordionPanelsStayOpenExample">
+    </div>
+    <!----<div class="accordion" id="accordionPanelsStayOpenExample">
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
@@ -184,7 +185,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>---->
     
     
     
