--- a/website/templates/pfm.html
+++ b/website/templates/pfm.html
@@ -31,7 +31,7 @@
           <div class="accordion-body">
             <strong>Course Outline</strong> 
             <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-          href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+          href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 4.1 Notes/PFM/COURSE OUTLINE PUBLIC SECTOR FINANCIAL MANAGEMENT.docx">Download</a>
           </div>
         </div>
       </div>
