--- a/website/static/base.css
+++ b/website/static/base.css
@@ -74,20 +74,6 @@
           width: 0%;
         }
         
-        @media screen and (max-width:500px){
-          #dwn{
-             display:inherit!important;
-             vertical-align: inherit!important;
-             margin-top: -8.5%!important;
-             margin-left: 60% }
-          a {
-            font-size: 17px!important;
-          }
-          .nav-link {
-            color: white!important;
-            font-size: 25px!important;
-          }
-        }
         #pager{
           position: relative!important;
           margin-top: 10px!important;
@@ -155,3 +141,36 @@
           
         }
         
+        @media screen and (max-width:500px){
+          #dwn{
+             display:inherit!important;
+             vertical-align: inherit!important;
+             margin-top: -8.5%!important;
+             margin-left: 60% }
+          a {
+            font-size: 17px!important;
+          }
+          .nav-link {
+            color: white!important;
+            font-size: 25px!important;
+          }
+          .background {
+            background: linear-gradient(45deg, #003366, #4CAF50);
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items:self-start;
+            
+          }
+          .button-container {
+            display: inline-flex;
+            flex-direction: column;
+          }
+          
+          .button-row {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+          }
+        }
