--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,13 +6,14 @@
 
 <div class="background">
     <div class="button-container">
-        <a href="/org" class="zoom-button">Organizational Devt. Change</a>
+        <!---<a href="/org" class="zoom-button">Organizational Devt. Change</a>-->
         <a href="/pfm" class="zoom-button">Public Finance Management</a>
         <a href="/research" class="zoom-button">Research Methodologies</a>
-        <a href="/corp" class="zoom-button">Corporate Governance</a>
-        <a href="/marketing" class="zoom-button">Marketing Mgmt.</a>
+       <!---<a href="/corp" class="zoom-button">Corporate Governance</a>---->
+        <!---<a href="/marketing" class="zoom-button">Marketing Mgmt.</a>---->
         <a href="/egov" class="zoom-button">E-Governance</a>
-        <a href="/crm" class="zoom-button">CRM</a>
+        <!---<a href="/crm" class="zoom-button">CRM</a>---->
+        <a href="/project" class="zoom-button">Project</a>
     </div>
   </div>
 
