--- a/website/templates/org.html
+++ b/website/templates/org.html
@@ -23,22 +23,21 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              Research Methodologies
+              Organisational Devt. Change
             </button>
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
             <div class="accordion-body">
-              <strong>Course Outline</strong> 
+              <strong>Notes</strong> 
               <div class="progress-container">
                 <div class="progress-bar" id="myBar"></div>
-              <a id="dwn" class="btn btn-outline-danger" rel="noopener" onclick="move()" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+              <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 4.1 Notes/Organisational Devt Change.pdf">Download</a>
             </div>
           </div>
         </div>
     </div>
-    
-    <div class="accordion" id="accordionPanelsStayOpenExample">
+ <!--------------<div class="accordion" id="accordionPanelsStayOpenExample">
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
@@ -185,8 +184,7 @@
           </div>
         </div>
       </div>
-    </div>
-    
+    </div>--------------->
     
     
     
