--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -16,5 +16,10 @@
         <a href="/project" class="zoom-button">Project</a>
     </div>
   </div>
+  
+{% block footer %}
+
+{% endblock %}
+
 
 {% endblock%}
