--- a/website/static/base.css
+++ b/website/static/base.css
@@ -156,7 +156,7 @@
           }
           .background {
             background: linear-gradient(45deg, #003366, #4CAF50);
-            height: 100%;
+            height: 100vh;
             display: flex;
             flex-direction: column;
             align-items:self-start;
