--- a/website/static/base.css
+++ b/website/static/base.css
@@ -86,7 +86,7 @@
           display: flex;
           flex-direction: row;
           align-items: center;
-          justify-content: space-evenly;
+          justify-content: center;
         }
         .button-container {
           display: inline-flex;
@@ -159,7 +159,7 @@
             height: 100vh;
             display: flex;
             flex-direction: column;
-            align-items:self-start;
+            align-items:center;
             
           }
           .button-container {
