--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,7 +6,7 @@
 
 <div class="background">
     <div class="button-container">
-        <a href="/org" class="zoom-button">Organizational Devt. Change</a>
+        <!---<a href="/org" class="zoom-button">Organizational Devt. Change</a>-->
         <a href="/pfm" class="zoom-button">Public Finance Management</a>
         <a href="/research" class="zoom-button">Research Methodologies</a>
        <!---<a href="/corp" class="zoom-button">Corporate Governance</a>---->
@@ -16,9 +16,8 @@
         <a href="/project" class="zoom-button">Project</a>
     </div>
   </div>
-  
-{% block footer %}
 
+{% block footer %}
 {% endblock %}
 
 
