--- a/website/templates/1sthome.html
+++ b/website/templates/1sthome.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<link rel="stylesheet" href="/website/static/base.css">
+<link rel="stylesheet" href="{{url_for('static', filename='base.css')}}">
 
 
 <div class="background">
