--- a/website/templates/33rdhome.html
+++ b/website/templates/33rdhome.html
@@ -5,13 +5,13 @@
 
 <div class="background">
     <div class="button-container">
-        <a href="/org" class="zoom-button">Public Policy</a>
-        <a href="/pfm" class="zoom-button">Public Sector Economics</a>
-        <a href="/research" class="zoom-button">Operations Management</a>
-        <a href="/corp" class="zoom-button">Public & Private Procurement</a>
-        <a href="/marketing" class="zoom-button">Devolved Govt. Financing</a>
-        <a href="/egov" class="zoom-button">International Relations</a>
-        <a href="/crm" class="zoom-button">TQM</a>
+        <a href="/" class="zoom-button">Public Policy</a>
+        <a href="/" class="zoom-button">Public Sector Economics</a>
+        <a href="/" class="zoom-button">Operations Management</a>
+        <a href="/" class="zoom-button">Public & Private Procurement</a>
+        <a href="/" class="zoom-button">Devolved Govt. Financing</a>
+        <a href="/" class="zoom-button">International Relations</a>
+        <a href="/" class="zoom-button">TQM</a>
 </div>
 
 {% block footer %}
