--- a/website/templates/c&m.html
+++ b/website/templates/c&m.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}PFM{% endblock %}
+{% block title %}Cost Accounting{% endblock %}
 {% block head %}
   {{ super() }}
  
@@ -9,13 +9,14 @@
 
 <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="/">Back to home
+    <li class="breadcrumb-item"><a href="/3.1">Back to home
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
       <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146ZM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5Z"/>
     </svg></a></li>
-    <li class="breadcrumb-item active" aria-current="page">4th year</li>
+    <li class="breadcrumb-item active" aria-current="page">3rd year</li>
   </ol>
 </nav>
+
 <div class="container-xxl">
 
 
@@ -23,16 +24,14 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              Research Methodologies
+              <strong>Cost & Management Accounting</strong> 
             </button>
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
             <div class="accordion-body">
               <strong>Course Outline</strong> 
-              <div class="progress-container">
-                <div class="progress-bar" id="myBar"></div>
-              <a id="dwn" class="btn btn-outline-danger" rel="noopener" onclick="move()" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+              <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 3.1 Notes/Cost & Management Accounting/HEH 2103.docx">Download</a>
             </div>
           </div>
         </div>
@@ -42,9 +41,9 @@
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
-            <strong>Assignments</strong> 
+            <strong>Lesson 1&2</strong> 
             <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 3.1 Notes/Cost & Management Accounting/LESSON 1 and 2.docx">Download</a>
           </div>
         </div>
       </div>
@@ -53,9 +52,9 @@
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
-            <strong>Chapter 1</strong> 
+            <strong>Process costing</strong> 
             <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 3.1 Notes/Cost & Management Accounting/PROCESS COSTING.docx">Download</a>
           </div>
         </div>
       </div>
@@ -64,19 +63,9 @@
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
-            <strong>Chapter 2</strong> 
+            <strong>Budgeting & Budget Control</strong> 
             <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
-          </div>
-        </div>
-      </div>
-    </div><div class="accordion" id="accordionPanelsStayOpenExample">
-      <div class="accordion-item">
-        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-          <div class="accordion-body">
-            <strong>Chapter 3</strong> 
-            <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 3.1 Notes/Cost & Management Accounting/BUDGETING AND BUDGETARY CONTROL.doc">Download</a>
           </div>
         </div>
       </div>
@@ -85,9 +74,20 @@
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
-            <strong>Chapter 4</strong> 
+            <strong>Budgeting 1</strong> 
             <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 3.1 Notes/Cost & Management Accounting/Budgeting I.docx">Download</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="accordion" id="accordionPanelsStayOpenExample">
+      <div class="accordion-item">
+        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+          <div class="accordion-body">
+            <strong>Budgeting 2</strong> 
+            <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 3.1 Notes/Cost & Management Accounting/Budgeting II.docx">Download</a>
           </div>
         </div>
       </div>
@@ -95,7 +95,7 @@
     
     
     
-    <div class="accordion" id="accordionPanelsStayOpenExample">
+   <!-----<div class="accordion" id="accordionPanelsStayOpenExample">
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
@@ -185,7 +185,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>---->
     
     
     
@@ -200,10 +200,10 @@
 {% block footer %}
 <nav aria-label="Page navigation example" id="pager">
   <ul class="pagination justify-content-end">
-    <li class="page-item"><a class="page-link" href="/marketing">
+    <li class="page-item"><a class="page-link" href="/negotiation">
       Previous</a></li>
-    <li disabled class="page-item">
-      <a class="page-link" href="">The End</a>
+    <li class="page-item">
+      <a class="page-link" href="/HRM">Corporate Gov.</a>
     </li>
   </ul>
 </nav>
