--- a/website/templates/n&n.html
+++ b/website/templates/n&n.html
@@ -9,11 +9,11 @@
 
 <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="/">Back to home
+    <li class="breadcrumb-item"><a href="/3.1">Back to home
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
       <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146ZM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5Z"/>
     </svg></a></li>
-    <li class="breadcrumb-item active" aria-current="page">4th year</li>
+    <li class="breadcrumb-item active" aria-current="page">3rd year</li>
   </ol>
 </nav>
 <div class="container-xxl">
@@ -23,16 +23,16 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              Research Methodologies
+              Negotiation & Networking
             </button>
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
             <div class="accordion-body">
-              <strong>Course Outline</strong> 
+              <strong>Notes</strong> 
               <div class="progress-container">
                 <div class="progress-bar" id="myBar"></div>
-              <a id="dwn" class="btn btn-outline-danger" rel="noopener" onclick="move()" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+              <a id="dwn" class="btn btn-outline-danger" rel="noopener"  download="" 
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 3.1 Notes/Negotiation and Networking/negotiation and networking notes.docx">Download</a>
             </div>
           </div>
         </div>
@@ -42,9 +42,9 @@
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
-            <strong>Assignments</strong> 
+            <strong>Notes continuation</strong> 
             <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 3.1 Notes/Negotiation and Networking/Negotiation and networking (2).docx">Download</a>
           </div>
         </div>
       </div>
@@ -53,9 +53,9 @@
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
-            <strong>Chapter 1</strong> 
+            <strong>Additional notes</strong> 
             <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 3.1 Notes/Negotiation and Networking/Negotiation and networking.docx">Download</a>
           </div>
         </div>
       </div>
@@ -64,9 +64,9 @@
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
-            <strong>Chapter 2</strong> 
+            <strong>Assignment 1</strong> 
             <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 3.1 Notes/Negotiation and Networking/negotiation.docx">Download</a>
           </div>
         </div>
       </div>
@@ -74,14 +74,15 @@
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
-            <strong>Chapter 3</strong> 
+            <strong>Assignment 2</strong> 
             <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="{{url_for('static', filename='uploads/receipt.pdf')}}">Download</a>
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 3.1 Notes/Negotiation and Networking/assignment 2 negotiation.docx">Download</a>
           </div>
         </div>
       </div>
     </div>
-    <div class="accordion" id="accordionPanelsStayOpenExample">
+
+    <!--<div class="accordion" id="accordionPanelsStayOpenExample">
       <div class="accordion-item">
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
@@ -185,7 +186,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>---->
     
     
     
@@ -200,7 +201,7 @@
 {% block footer %}
 <nav aria-label="Page navigation example" id="pager">
   <ul class="pagination justify-content-end">
-    <li class="page-item"><a class="page-link" href="/marketing">
+    <li class="page-item"><a class="page-link" href="/costaccounting">
       Previous</a></li>
     <li disabled class="page-item">
       <a class="page-link" href="">The End</a>
