--- a/website/templates/n&n.html
+++ b/website/templates/n&n.html
@@ -201,7 +201,7 @@
 {% block footer %}
 <nav aria-label="Page navigation example" id="pager">
   <ul class="pagination justify-content-end">
-    <li class="page-item"><a class="page-link" href="/evol">
+    <li class="page-item"><a class="page-link" href="/evolution">
       Evolution</a></li>
     <li disabled class="page-item">
       <a class="page-link" href="/PM">Project Management</a>
