--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -43,12 +43,12 @@
 
   <div class="field">
     <label class="control-label" for="user_email">Email</label><br>
-    <input autofocus="autofocus" autocomplete="on" class="form-control" type="text" name="user[email]" id="user_email">
+    <input autofocus="autofocus" autocomplete="email" class="form-control" type="text" name="user[email]" id="user_email">
   </div>
 
   <div class="field">
     <label class="control-label" for="user_password">Password</label><br>
-    <input autocomplete="on" class="form-control" type="password" name="user[password]" id="user_password">
+    <input autocomplete="current-password" class="form-control" type="password" name="user[password]" id="user_password">
   </div>
 
     <div class="field">
