--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -1,144 +1,88 @@
-{% block head %}
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!--------------------------------------------------CSS------------------------------------------------->
-  <link prefetch href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
-  rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 
-  crossorigin="anonymous">
-  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
-  integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--------------------------------------------------CSS------------------------------------------------->
+    <link prefetch href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 
+    crossorigin="anonymous">
+    <script async src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
 
   </script>
-
- 
-
-  <!-----------------------------FONTS------------------------------------------------------->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://flasknotes.blob.core.windows.net/ggggg/log.css">
+    <!-----------------------------FONTS------------------------------------------------------->
+    
 
 <!---------------------------------FAVICON---------------------------------------------------------------------->
 
-
-  <!-------------------------title----------------------------------------------------------------->
-  <title>Sign-up</title>
-{% endblock %}
+    
+    <title>signup</title>
 </head>
 <body>
   <div class="alert alert-danger alert-dismissible fade show" role="alert">
-    <strong class="a">Page still under-development! </strong>Don't input any information
+    <strong>Page still under-development! </strong>Don't input any information
     <!---------<button type="button" class="btn-close" data-bs-dismiss="alert" 
       aria-label="Close"></button>----->
   </div>
-  <section class="vh-150 bg-image"
-  style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
-  <div class="mask d-flex align-items-center h-150 gradient-custom-3">
-    <div class="container h-20">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-          <div class="card" style="border-radius: 15px;">
-            <div class="card-body p-5">
-              <h2 class="text-uppercase text-center mb-5">Create an account</h2>
-              <p>All fields marked with * are required</p>
-              <form method="POST">
 
-                <div class="form-outline mb-4">
-                  <input aria-autocomplete="name" autofocus required placeholder="Name*" type="text" id="form3Example1cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example1cg">Your Name</label>
-                </div>
-                
-                 <div class="form-outline mb-4">
-                    <input autocomplete="phone number" placeholder="0712345678" 
-                    type="text" id="form3Example1cg" class="form-control form-control-lg" />
-                    <label class="form-label" for="form3Example1cg">Your Phone Number</label>
-                  </div>
-                
+  <div id="layout-bars"></div>
 
-                <div class="form-outline mb-4">
-                  <input  aria-autocomplete="email" autofocus required placeholder="Email shall be used as username*" type="email" id="form3Example3cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example3cg">Your Email</label>
-                </div>
+    <article class="">
 
-                <div class="form-outline mb-4">
-                  <input autocomplete="new-password" required placeholder="Password*" type="Password" id="form3Example4cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cg">Password</label>
-                </div>
+      <div class="logged_out_form">
 
-                <div class="form-outline mb-4">
-                  <input autocomplete="new-password" autofocus required placeholder="Type same password as used above*" type="password" id="form3Example4cdg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cdg">Confirm your password</label>
-                </div>
+<h2 class="hbtn_logo"> Register here!
+</h2>
 
-                <div class="form-check d-flex justify-content-center mb-5">
-                  <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
-                  <label class="form-check-label" for="form2Example3g">
-                    I agree to the <a href="#!" class="text-body"><u>Terms of service</u></a>
-                  </label>
-                </div>
+<form class="sm-gap" id="new_user" action="/auth/sign_in" accept-charset="UTF-8" method="post"><input type="hidden" name="authenticity_token" value="_dL6erxek3rUqwH2OIGwEcXM0ck4Vo6utBPPJ5l8GEm6ml1Ii4g2zZp9L6rF5-U36wH5ThX9ECnq7VgnS-Mrlw" autocomplete="off">
+<p><h4><b>All fields are required</b></h4></p>
 
-                <div class="d-flex justify-content-center">
-                  <button  type="submit" name="commit" value="Sign-up"
-                     class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
-                </div>
-
-                <p class="text-center text-muted mt-5 mb-0">Already, have an acoount?<a href="/login"
-                    class="fw-bold text-body"><u>Login here</u></a></p>
-
-              </form>
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="field">
+    <label class="control-label" for="user_email">Email</label><br>
+    <input required autofocus="autofocus" autocomplete="email" class="form-control" type="text" name="user[email]" id="user_email">
   </div>
-</section>
+  <div class="field">
+    <label class="control-label" for="user_phone">Phone Number</label><br>
+    <input  required autofocus="autofocus" autocomplete="tel" class="form-control" type="text" name="user[phone]" id="user_phone">
+  </div>
+  <div class="field">
+    <label class="control-label" for="user_password">Password</label><br>
+    <input required autocomplete="new-password" class="form-control" type="password" name="user[password]" id="user_password">
+  </div>
+  <div class="field">
+    <label class="control-label" for="user_password">Confirm Password</label><br>
+    <input autocomplete="new-password" class="form-control" required type="password" name="user[password]">
+  </div>
 
-<script defer>
-    
-const info = document.querySelector(".alert-info");
+   
 
-function process(event) {
- event.preventDefault();
+  <div class="actions">
+    <input type="submit" name="commit" value="Register" class="btn btn-primary" data-disable-with="Register">
+  </div>
+</form>
+<ul id="devise_links" class="gap">
 
- const phoneNumber = phoneInput.getNumber();
+    <!--<a href="/auth/unlock/new">Didn&#39;t receive unlock instructions?</a>-->
+  </li>
+<li style="margin-top: 5px;" >
+  <P>Already have an account?</P>
+  <a href="/login"><bold>Log-In here!</bold></a>
+</li>
+<!--
+<li>
+  <a href="https://aka.ms/ssprsetup">Forgot your password?</a>
+</li>
+-->
+</ul>
+</div>
+</article>
 
- info.style.display = "";
- info.innerHTML = `Phone number in E.164 format: <strong>${phoneNumber}</strong>`;
-}
-
-</script>
-<script defer>
-    
-   const phoneInputField = document.querySelector("#phone");
-   const phoneInput = window.intlTelInput(phoneInputField, {
-    initialCountry: "auto",
- geoIpLookup: "getIp",
- preferredCountries: ["ke"],
-    
-     utilsScript:
-       "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js",
-   });
-</script>
-<script>
-    const togglePassword = document.querySelector('#togglePassword');
-  const password = document.querySelector('#id_password');
-
-  togglePassword.addEventListener('click', function (e) {
-    // toggle the type attribute
-    const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
-    password.setAttribute('type', type);
-    // toggle the eye slash icon
-    this.classList.toggle('fa-eye-slash');
-});
-</script>
 
 </body>
 </html>
-
-
 {% block content %}
-
 {% endblock %}
