--- a/website/templates/PM.html
+++ b/website/templates/PM.html
@@ -44,7 +44,7 @@
           <div class="accordion-body">
             <strong>Main Notes</strong> 
             <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL%203.1%20Notes/Project%20Management/HPS%202407%20PROJECT%20MANAGEMENT-COURSE%20OUTLINE-31012022.pdf">Download</a>
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL%203.1%20Notes/Project%20Management/BPAL%203.1%20HPS%202407%20-%20PM%2031012022.pdf">Download</a>
           </div>
         </div>
       </div>
