--- a/website/templates/33rdhome.html
+++ b/website/templates/33rdhome.html
@@ -5,13 +5,14 @@
 
 <div class="background">
     <div class="button-container">
-        <a href="/" class="zoom-button">Public Policy</a>
-        <a href="/" class="zoom-button">Public Sector Economics</a>
-        <a href="/" class="zoom-button">Operations Management</a>
-        <a href="/" class="zoom-button">Public & Private Procurement</a>
-        <a href="/" class="zoom-button">Devolved Govt. Financing</a>
-        <a href="/" class="zoom-button">International Relations</a>
-        <a href="/" class="zoom-button">TQM</a>
+        <a href="/TQM" class="zoom-button">TQM</a>
+        <a href="/economics" class="zoom-button">Public Sector Economics</a>
+        <a href="/operations" class="zoom-button">Operations Management</a>
+        <!---<a href="/procurement" class="zoom-button">Public & Private Procurement</a>--->
+        <a href="/devolved" class="zoom-button">Devolved Govt. Financing</a>
+        <a href="/IR" class="zoom-button">International Relations</a>
+        <a href="/publicpolicy" class="zoom-button">Public Policy</a>
+        
 </div>
 
 {% block footer %}
